Выполнено HW6_не смотреть